<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sequence_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

<!--    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/led_one"
        android:layout_width="100dp"
        android:layout_height="100dp"
        tools:background="@color/dark_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/led_two"
        app:layout_constraintBottom_toTopOf="@id/button_a" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/led_two"
        android:layout_width="100dp"
        android:layout_height="100dp"
        tools:background="@color/dark_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_a" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/led_three"
        android:layout_width="100dp"
        android:layout_height="100dp"
        tools:background="@color/dark_grey"
        app:layout_constraintStart_toEndOf="@id/led_two"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_a" />-->

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/led_one"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/white"
        tools:background="@color/dark_grey"
        tools:text="A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/led_two"
        app:layout_constraintBottom_toTopOf="@id/button_a" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/led_two"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/white"
        tools:background="@color/dark_grey"
        tools:text="B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_a" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/led_three"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/white"
        tools:background="@color/dark_grey"
        tools:text="A"
        app:layout_constraintStart_toEndOf="@id/led_two"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_a" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="A"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_a"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_b"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
